order-form-v1.2/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/API_Access__c.field-meta.xml
<CustomField>
    <fullName>API_Access__c</fullName>
    <description>Mirrors the product API Access flag so flows can filter on it and the Order Form can mark the line.</description>
    <formula>SBQQ__Product__r.API_Access__c</formula>
    <label>API Access</label>
    <type>Checkbox</type>
</CustomField>