order-form-v1.2/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Authorised_User_Count__c.field-meta.xml
<CustomField>
    <fullName>Authorised_User_Count__c</fullName>
    <label>Authorised User Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>