order-form-v1.2/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Benefiting_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>Benefiting_Group_Description__c</fullName>
    <label>Benefiting Group Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>