order-form-v1.2/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Headcount_Notify_Override__c.field-meta.xml
<CustomField>
    <fullName>Headcount_Notify_Override__c</fullName>
    <inlineHelpText>Legal-approved redlines only: replaces the automatic notify-increase figure in the Law.com Firmwide License sentence (e.g. a 65-attorney firm negotiating notify-at-80 uses 15).</inlineHelpText>
    <label>Headcount Notify Increase (Override)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>