order-form-v1.2/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_First_Segment__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Segment__c</fullName>
    <formula>OR(ISBLANK(SBQQ__SegmentIndex__c), SBQQ__SegmentIndex__c = 1)</formula>
    <inlineHelpText>TRUE for non-MDQ lines and the first year of an MDQ product; FALSE for year-2+ segments. Used by the Order Form to print licence wording once per product.</inlineHelpText>
    <label>Is First Segment</label>
    <type>Checkbox</type>
</CustomField>