order-form-v1.2/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Lawcom_Firmwide_Sentence__c.field-meta.xml
<CustomField>
    <fullName>Lawcom_Firmwide_Sentence__c</fullName>
    <formula>IF(AND(
OR(TEXT(SBQQ__Product__r.Family) = 'Subs - Law.com', TEXT(SBQQ__Product__r.Family) = 'Subs - Law Journal Press', TEXT(SBQQ__Product__r.Family) = 'Subs - Regional'),
OR(AND(UPPER(TRIM(Promo_Code__c)) = 'OE', ISBLANK(TEXT(License_Model_Override__c))), TEXT(License_Model__c) = 'Firmwide License')
),
'Firmwide License means access for all Authorised Users within the Customer organisation.' &amp;
IF(Warranted_Headcount__c &gt; 0,
' The Customer represents that, as of the Effective Date, it has approximately ' &amp; TEXT(Warranted_Headcount__c) &amp; ' Authorised Users. The Customer shall promptly notify the Company if the number of Authorised Users increases by more than ' &amp;
IF(Headcount_Notify_Override__c &gt; 0, TEXT(Headcount_Notify_Override__c),
IF(Warranted_Headcount__c &lt;= 30, '5', IF(Warranted_Headcount__c &lt;= 100, '10', IF(Warranted_Headcount__c &lt;= 150, '20', '5%')))) &amp;
', and the Company reserves the right to adjust the applicable Fees to reflect such increase.',
''),
'')</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Prints in the Licence Model column when a Law.com-family line is a Firmwide License: Shinae's approved wording (9 Sep 2026) with the notify-increase figure from Richard's bands (5 / 10 / 20; 5% above 150 attorneys) or the legal-approved override.</inlineHelpText>
    <label>Law.com Firmwide Sentence</label>
    <type>Text</type>
</CustomField>