order-form-v1.2/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/License_Model_Display__c.field-meta.xml
<CustomField>
    <fullName>License_Model_Display__c</fullName>
    <formula>TRIM(IF(NOT(ISBLANK(Lawcom_Firmwide_Sentence__c)), Lawcom_Firmwide_Sentence__c,
IF(AND(UPPER(TRIM(Promo_Code__c)) = "OE", ISBLANK(TEXT(License_Model_Override__c))), "Firmwide License",
IF(AND(TEXT(SBQQ__Product__r.Family) = "Subs - Legal Monitor", ISBLANK(TEXT(License_Model_Override__c))), IF(Authorised_User_Count__c &gt; 0, "Licence for up to " &amp; TEXT(Authorised_User_Count__c) &amp; " Licensed Users, each an Individual User named by the Customer, under the Legal Monitor Terms and Conditions (Schedule 1).", "Licence for the Licensed Users set out in Special Instructions (section 6), under the Legal Monitor Terms and Conditions (Schedule 1)."),
CASE(TEXT(License_Model__c),
"Authorised Users", IF(AND(ISBLANK(TEXT(License_Model_Override__c)), Authorised_User_Count__c = 1, TEXT(SBQQ__Product__r.Family) = "Subs - Lexology Pro", IF(SBQQ__ProratedListPrice__c &gt; 0, SBQQ__ProratedListPrice__c, SBQQ__ListPrice__c) &gt; 0, SBQQ__NetTotal__c &gt;= 2 * IF(SBQQ__ProratedListPrice__c &gt; 0, SBQQ__ProratedListPrice__c, SBQQ__ListPrice__c)), "Firmwide License", IF(Authorised_User_Count__c = 1, "Authorised Users - 1 named authorised user (as defined in the General Terms).", IF(Authorised_User_Count__c &gt; 0, "Authorised Users - " &amp; TEXT(Authorised_User_Count__c) &amp; " named authorised users (as defined in the General Terms).", "Authorised Users - Named authorised users (as defined in the General Terms)."))),
"Limited Access", IF(Authorised_User_Count__c = 1, "Limited Access - Up to 1 authorised user (as defined in the General Terms).", IF(Authorised_User_Count__c &gt; 0, "Limited Access - Up to " &amp; TEXT(Authorised_User_Count__c) &amp; " authorised users (as defined in the General Terms).", "Limited Access")),
"Benefiting Group", IF(NOT(ISBLANK(Benefiting_Group_Description__c)), "Benefiting Group - All individuals within the following group: " &amp; Benefiting_Group_Description__c, IF(NOT(ISBLANK(Function_Name__c)), "Benefiting Group - All individuals within the following group: " &amp; Function_Name__c &amp; IF(Group_Size__c &gt; 0, ", comprising approximately " &amp; TEXT(Group_Size__c) &amp; " individuals", ""), IF(NOT(ISBLANK(TEXT(Benefitting_Group__c))), "Benefiting Group - All individuals within the following group: the Customer's " &amp; TEXT(Benefitting_Group__c) &amp; " function" &amp; IF(Group_Size__c &gt; 0, ", comprising approximately " &amp; TEXT(Group_Size__c) &amp; " individuals", ""), IF(NOT(ISBLANK(TEXT(Benefitting_Group_Type__c))), "Benefiting Group - All individuals within the Customer's " &amp; IF(TEXT(Benefitting_Group_Type__c) = "Corporate", "in-house legal function", "organisation") &amp; IF(Group_Size__c &gt; 0, ", comprising approximately " &amp; TEXT(Group_Size__c) &amp; " individuals", ""), "Benefiting Group")))),
"Included", IF(ISBLANK(TEXT(SBQQ__Product__r.Brand__c)), "Included as part of the subscription.", "Included as part of the " &amp; TEXT(SBQQ__Product__r.Brand__c) &amp; " subscription."),
"Enterprise-Wide Access", "Enterprise-Wide Access - All current staff of the Customer and its Affiliates. Customer warrants approximately " &amp; TEXT(Warranted_Headcount__c) &amp; " staff at the Effective Date.",
TEXT(License_Model__c))))) &amp; IF(NOT(ISBLANK(Geography__c)), " Geography: " &amp; Geography__c &amp; ".", "") &amp; IF(SBQQ__Product__r.API_Access__c, " Includes API access (API Terms apply).", ""))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>License Model (Display)</label>
    <type>Text</type>
</CustomField>