order-form-v1.2/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/License_Model_Override__c.field-meta.xml
<CustomField>
    <fullName>License_Model_Override__c</fullName>
    <description>Manual licence-model override. When set, it beats BOTH the product-default model and the qty-1 Lexology Pro price heuristic (2x list = Firmwide License): the stamp flow copies it into License Model and the document prints accordingly. Leave blank for automatic derivation. Exception valve - expected use is a handful of edge deals a year.</description>
    <label>License Model Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authorised Users</fullName>
            </value>
            <value>
                <fullName>Limited Access</fullName>
            </value>
            <value>
                <fullName>Benefiting Group</fullName>
            </value>
            <value>
                <fullName>Enterprise-Wide Access</fullName>
            </value>
            <value>
                <fullName>Individual License</fullName>
            </value>
            <value>
                <fullName>Team License</fullName>
            </value>
            <value>
                <fullName>Office License</fullName>
            </value>
            <value>
                <fullName>Group License</fullName>
            </value>
            <value>
                <fullName>Firmwide License</fullName>
            </value>
            <value>
                <fullName>Bespoke License</fullName>
            </value>
            <value>
                <fullName>Included</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>