order-form-v1.2/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Order_Form_BG_Type_Words__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_BG_Type_Words__c</fullName>
    <description>21 Sep 2026 (Kam, after Charlie Murray / VARO Partners): the words the Benefiting Group sentence uses when the group is described only by its type. Benefitting Group Type first - Corporate means the in-house legal function - then the Law.com BG Group field Law.com reps fill on the segmented line, where any value prints "organisation": a Law.com customer buys for the whole company as often as for its legal team, so the wider wording is the safe default and a rep who means a single team names it in Function Name.</description>
    <formula>IF(TEXT(Benefitting_Group_Type__c) = "Corporate", "in-house legal function",
  IF(NOT(ISBLANK(TEXT(Benefitting_Group_Type__c))), "organisation",
    IF(NOT(ISBLANK(TEXT(Law_com_BG_Group__c))), "organisation", "")))</formula>
    <label>Order Form: group type words</label>
    <type>Text</type>
</CustomField>