order-form-v1.2/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Order_Form_Content__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Content__c</fullName>
    <description>Contributor Order Form "Content" column (16 Sep 2026): one text that names whatever the line carries - chapter (content slot jurisdiction or free-prose type + title), named individual (biography taker; hidden when the quote is No Names), scope, reports covered, word count, content type, order year, submission deadline, Intelligence office tier - and, for a cross-sold subscription line, the short licence label. Parts are joined with a middle dot; the leading separator is trimmed.</description>
    <formula>MID(
IF(NOT(ISBLANK(TEXT(Content_Slot__r.Jurisdiction__c))), " · Chapter: " &amp; TEXT(Content_Slot__r.Jurisdiction__c), IF(NOT(ISBLANK(TEXT(Free_Prose_Type__c))), " · " &amp; TEXT(Free_Prose_Type__c) &amp; IF(NOT(ISBLANK(Free_Prose_Title__c)), ": " &amp; Free_Prose_Title__c, ""), "")) &amp;
IF(NOT(ISBLANK(Bio_Taker__c)), IF(SBQQ__Quote__r.Order_Form_No_Names__c, " · Named individual", " · Named individual: " &amp; Bio_Taker__r.FirstName &amp; " " &amp; Bio_Taker__r.LastName), "") &amp;
IF(NOT(ISBLANK(TEXT(Scope__c))), " · Scope: " &amp; TEXT(Scope__c), "") &amp;
IF(NOT(ISBLANK(TEXT(Reports_Covered__c))), " · " &amp; TEXT(Reports_Covered__c), "") &amp;
IF(NOT(ISBLANK(TEXT(Number_of_Words__c))), " · " &amp; TEXT(Number_of_Words__c) &amp; " words", "") &amp;
IF(NOT(ISBLANK(TEXT(Content_Type__c))), " · " &amp; TEXT(Content_Type__c), "") &amp;
IF(NOT(ISBLANK(TEXT(Order_Year__c))), " · " &amp; TEXT(Order_Year__c), "") &amp;
IF(NOT(ISBLANK(Submission_Deadline_Date__c)), " · Submission by " &amp; TEXT(DAY(Submission_Deadline_Date__c)) &amp; "/" &amp; TEXT(MONTH(Submission_Deadline_Date__c)) &amp; "/" &amp; TEXT(YEAR(Submission_Deadline_Date__c)), "") &amp;
IF(NOT(ISBLANK(TEXT(Lexology_Intelligence_Office_Tier__c))), " · Office tier: " &amp; TEXT(Lexology_Intelligence_Office_Tier__c), "") &amp;
IF(AND(ISBLANK(Bio_Taker__c), ISBLANK(TEXT(Content_Slot__r.Jurisdiction__c)), ISBLANK(TEXT(Free_Prose_Type__c)), NOT(ISBLANK(TEXT(License_Model__c)))), " · " &amp; License_Model_Short__c, ""),
4, 1000)</formula>
    <label>Order Form: content</label>
    <type>Text</type>
</CustomField>