order-form-v1.2/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Order_Form_Line_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Line_Date__c</fullName>
    <description>Contributor Order Form "Date" column (20 Sep 2026, Kam): point-in-time products print this one date. Sources in order - the line Product Date, the product's own Product Date (the copy to the line is missing on about a quarter of lines), the parent line's date for zero-fee add-ons such as Bespoke PDF, then the SUN Report start date. Time-Based products print it as the start of their period, with Order Form: end date alongside.</description>
    <formula>BLANKVALUE(Product_Date__c,
  BLANKVALUE(SBQQ__Product__r.Product_Date__c,
    BLANKVALUE(SBQQ__RequiredBy__r.Product_Date__c,
      BLANKVALUE(SBQQ__RequiredBy__r.SBQQ__Product__r.Product_Date__c, Start_Date_SUN_Report__c))))</formula>
    <label>Order Form: date</label>
    <type>Date</type>
</CustomField>