order-form-v1.2/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Order_Form_Line_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Line_End_Date__c</fullName>
    <description>Contributor Order Form "End date" column (20 Sep 2026, Kam): only Time-Based products run over a period, so the cell stays empty for point-in-time (Edition-Based) lines.</description>
    <formula>IF(TEXT(SBQQ__Product__r.Subscription_Model__c) = "Time-Based", End_Date_SUN_Report__c, null)</formula>
    <label>Order Form: end date</label>
    <type>Date</type>
</CustomField>