order-form-v1.2/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Order_Form_Print_Contrib_Row__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Print_Contrib_Row__c</fullName>
    <description>Contributor Order Form products-table filter (16 Sep 2026): the Subscription rule (Order Form: print row) plus hide any zero-fee bundle parent - e.g. "Lexology Panoramic: Air Transport 2027 - Bundle" - whose priced chapter and content-slot children print as their own rows.</description>
    <formula>AND(Order_Form_Print_Row__c, NOT(AND(SBQQ__Bundle__c, SBQQ__NetTotal__c = 0)))</formula>
    <label>Order Form: print row (contributor)</label>
    <type>Checkbox</type>
</CustomField>