order-form-v1.2/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Order_Form_Print_Licence_Row__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Print_Licence_Row__c</fullName>
    <description>Filter for the Order Form Licence terms block: one row per product (first MDQ segment only) and never a hidden bundle parent row.</description>
    <formula>AND(Is_First_Segment__c, Order_Form_Print_Row__c)</formula>
    <label>Order Form: print licence row</label>
    <type>Checkbox</type>
</CustomField>