order-form-v1.2/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Order_Form_Print_Row__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Print_Row__c</fullName>
    <description>Filter for the Order Form products table. False only for a Legal Monitor bundle parent line (non-component product named &quot;Bundle&quot; at zero) - those carry no fee and would print as a pointless zero row above the priced tier line. Everything else prints.</description>
    <formula>NOT(AND(
  TEXT(SBQQ__Product__r.Family) = "Subs - Legal Monitor",
  NOT(SBQQ__Product__r.SBQQ__Component__c),
  SBQQ__NetTotal__c = 0,
  CONTAINS(SBQQ__ProductName__c, "Bundle")
))</formula>
    <label>Order Form: print row</label>
    <type>Checkbox</type>
</CustomField>