order-form-v1.2/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Warranted_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Warranted_Headcount__c</fullName>
    <label>Warranted Headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>